@@ -1,4 +1,4 @@
-VERSION=1.19
+VERSION=1.20
 PYTHON=python
 
 test:
