@@ -1,8 +1,9 @@
-2013/12/05 (version 1.19)
+2013/12/05 (version 1.20)
 
 - Fixed a crash when there's no database.
 - Special tag "pin" replaced with "next".
 - Can now finish and restart tasks using the search window popup menu.
+- Can now open linked pages from the search window popup menu.
 
 
 2013/11/27 (version 1.17)
